# agentic-fedex-assistant-Google-ADK

./: .env.example  .gitignore  FINAL_IMPROVEMENTS.md  FINAL_SYSTEM_STATUS.md  GITHUB_SETUP.md  INSTRUCTIONS_FOR_OPENAI.md  OPENAI_SETUP.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  UI_AND_STRUCTURE_IMPROVEMENTS.md  UI_ENHANCEMENTS.md  config.yaml  fedex_app.py  fedex_app_agentic.py  fedex_app_nicegui.py  fedex_main.py  fedex_rates.db  fedex_training.json  mkdocs.yml  pyproject.toml  run_app.sh  switch_llm.sh  test_vanna.py  validation_set.csv  validation_set_corrected.csv
.claude/commands/: test.md
Vanna/: __init__.py  config.py  model_manager.py  sql_engine.py  text_to_sql.py  utils.py
VannaOld/: config.py.old
agents/: __init__.py  unified_agent.py  validation_keywords.py  zone_lookup_tool.py
docs/: costarprompt.md  index.md  servicelevelmapprompt.md  sqlloadprompt.md  streamlitcostar.md  streamlitcostar_v2_updated.md  vanna.md  vannarefactoring.md
output/: fedex_rates_final.csv
src/: check_vanna_setup.py  create_service_tiers.py  extract_fedex_rates.py  load_to_sqlite.py  sqltester.py  vanna_ollama_sqlite_fedex.py
src/Vanna/: __init__.py  config.py  model_manager.py  sql_engine.py  text_to_sql.py  training_data.py  utils.py
src/agents/: __init__.py  adk_agents.py  session_manager.py  state.py  unified_agent.py  weather_tool.py  zone_lookup_tool.py
src/logging/: __init__.py  trajectory_logger.py
src/tools/: __init__.py  mcp_server.py  weight_estimator.py  zone_calculator.py
